3A aangepast en afgemaakt

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -1091,7 +1091,7 @@
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto; text-align: left;"><strong> </strong>
                         <p><div class="alert alert"> 
-                            <a class="icon-warning"></a><strong> Warning:</strong> The regional format of your computer must be set to the same language as TestVision for this instruction to be succesful. If your computer's regional format does not match TestVision's language, the grade export from TestVision will be interpreted incorrectly and as a result the grades cannot be exported to Canvas.
+                            <a class="icon-warning"></a><strong> Warning: The regional format of your computer must be set to the same language as TestVision for this tutorial.</strong> If your computer's regional format does not match TestVision's language, the grade export from TestVision will be interpreted incorrectly and as a result the grades cannot be exported to Canvas.
                         </div></p>
                     </td>
                 </tr>
@@ -1158,7 +1158,17 @@
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>6.</strong></span></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Open the CSV-file you just downloaded and <u>save it as an Excel workbook (.xlsx) file</u>.</span></strong></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Open the file you just downloaded and <u>rename the 'mark' (or 'cijfer' if TestVision is set to Dutch) column</u> to the name you want your students to see in Canvas when you post the grades.</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">If you wish, you can delete all columns except those with the student ID's and grades, as only these are required for the import.<br><br>
+                        <img src="/courses/8175/files/8418767/preview" alt="rename_excel" /><br><br>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>7.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Save the file as an <u>Excel workbook (.xlsx) file</u>.</span></strong></td>
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
@@ -1174,17 +1184,17 @@
                     </td>
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>7.</strong></span></td>
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>8.</strong></span></td>
                     <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Go to the final grades tool in Canvas and click on <u>Import from file</u> > <u>Partial grades</u>.</span></strong></td>
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
                     <td style="width: 89.5941%; border-style: hidden;">
-                        <img src="/courses/8175/files/8391209/preview" alt="import_partial_grades" /><br><br>
+                        <img src="/courses/8175/files/8420065/preview" alt="import_partial_grades" /><br><br>
                     </td>
                 </tr>
                 <tr style="height: auto;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 14pt;"><strong>8.</strong></span></td>
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 14pt;"><strong>9.</strong></span></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
                         <p><strong>A new window will open. Select and match the student ID and grade columns for import.</strong></p>
                     </td>
@@ -1194,17 +1204,17 @@
                     <td style="width: 90%; border-style: hidden; height: auto;">
                         Please ensure the following:
                         <ol>
-                            <li><u>loginname</u> (or <u>aanmeldnaam</u> if TestVision was set to Dutch) is set to <u>Student ID</u>.</li>
-                            <li><u>mark</u> (or <u>cijfer</u> if TestVision was set to Dutch) is set to <u>a Canvas assignment for the exam grades</u>.</li>
+                            <li><u>loginname</u> (or <u>aanmeldnaam</u> if TestVision was set to Dutch) is set to <u>&#60;Student ID&#62;</u>.</li>
+                            <li><u>The name grade column you just renamed</u> is set to <u>&#60;new component&#62;</u>. You can also select <u>an existing Canvas assignment</u> if you've already created an assignment.</li>
                         </ol>
                         <span style="font-size: 15pt"; style="color: #6096e6";><a id="no_tests" class="Button Button--link" style="text-align: left; margin-left: auto; margin-right: auto;" href="#dialog_for_import_grades"><i class="icon-question"></i><em> Don't see your Canvas assignment? </em></span></a></span><br>
-                        <div id="dialog_for_import_grades" class="enhanceable_content dialog" style="font-size: 12pt;"><strong>Don't see you Canvas assignment?</strong><br />If you haven't added your Canvas assignment to the final grades calculation yet, you can't import the grades via the final grades tool. To resolve this, please add the assignment to the final grades calculation. Learn how to add your assignment to the calculation <a href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool#basic1" target="_blank">here</a>.<br><br></div>
+                        <div id="dialog_for_import_grades" class="enhanceable_content dialog" style="font-size: 12pt;"><strong>Don't see you Canvas assignment?</strong><br />If you haven't added your Canvas assignment to the final grades calculation yet, you can't import the grades via the final grades tool. To resolve this, please create and add an assignment for the exam to the final grades calculation. Learn how to add your assignment to the calculation <a href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool#basic1" target="_blank">here</a>.<br><br></div>
                         <br><br>
-                        <img src="/courses/8175/files/8391046/preview" alt="import_columns" />
+                        <img src="/courses/8175/files/8420218/preview" alt="import_columns" />
                         <p><span class="element_toggler" role="button" aria-controls="dutch-import-3-1" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Dutch import settings</em></span> </span></p>
                         <div id="dutch-import-3-1" style="display: none; color: #6096e6;">
                             <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL">
-                                <img src="/courses/8175/files/8390998/preview" alt="import_columns_nl" /><br><br>
+                                <img src="/courses/8175/files/8420227/preview" alt="import_columns_nl" /><br><br>
                             </p>
                             <br><br>
                         </div>
@@ -1217,15 +1227,15 @@
                     </td>
                 </tr>
                 <tr style="height: auto;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 14pt;"><strong>9.</strong></span></td>
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 14pt;"><strong>10.</strong></span></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p><strong>Scroll down and press <u>OK</u> to import the grades.</strong></p>
+                        <p><strong>Scroll down and <u>select the mute newly created assignment option</u> if you don't want the grades to be posted yet. Click on <u>OK</u> to import the grades.</strong></p>
                     </td>
                 </tr>
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 14pt;"><strong>&nbsp;</strong></span></td>
                     <td style="width: 90%; border-style: hidden; height: auto;"> Your grades have now been imported to Canvas! You can view them in the gradebook and in the final grades tool after calculating the grades.<br><br>
-                        <img src="/courses/8175/files/8391277/preview" alt="ok_button" />
+                        <img src="/courses/8175/files/8420535/preview" alt="ok_button" />
                     </td>
                 </tr>
                 <tr style="height: auto;">
@@ -1269,58 +1279,52 @@
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
                 <td style="width: 90%; border-style: hidden; height: auto; text-align: left;"><strong> </strong>
                     <p><div class="alert alert"> 
-                        <a class="icon-warning"></a><strong> Warning:</strong> If you choose to export your grades using this method, your grades might differ from the ones in TestVision. When using the direct link between the final grades tool and TestVision, the final grades tool extracts the points from TestVision and applies its own grade calculation to these points. This calculation includes a chance score for multiple choice questions. If you do not have multiple choice questions, the scores 
+                        <a class="icon-warning"></a><strong> Warning: If you choose to export your grades using this method, the grades in the final grades tool might differ from those in TestVision.</strong> This method extracts the points from TestVision and applies its own grade calculation to these. This calculation always includes a chance score for multiple choice questions, which unfortunately cannot be disabled. If you wish to export your grades without a chance score, please <a href="#FAQ_A5">disable the chance score</a> and <a href="#FAQ_F1">export the grades via Excel</a>.
                     </div></p>
                 </td>
             </tr>
             <tr style="height: 45px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>1.</strong></span></td>
-                <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Ensure the regional format of your computer to the same language as TestVision.</span></strong></td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Go to the <u>Calculation setup</u> in Canvas' <u>Final grades menu</u>.</span></strong></td>
             </tr>
             <tr>
                 <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
-                <td style="width: 89.5941%; border-style: hidden;">You can set your regional format under <u>Settings</u> > <u>Time & Languague</u> > <u>Region</u> > <u>Regional Format</u>. Select <u>English (United States)</u> if TestVision is set to English. Select <u>Dutch (Netherlands)</u> if TestVision is set to Dutch. This tutorial uses English (United States), as TestVision is set to English.
-                    <p><span class="element_toggler" role="button" aria-controls="regional-format-3-1" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>How to navigate to the regional format settings</em></span> </span></p>
-                    <div id="regional-format-3-1" style="display: none; color: #6096e6;">
+                <td style="width: 89.5941%; border-style: hidden;">Can't find the final grades menu? You'll have to <span class="element_toggler" role="button" aria-controls="enable-final-grades-3-2" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>enable it first</em></span>.</span>
+                    <div id="enable-final-grades-3-2" style="display: none; color: #6096e6;">
                         <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL">
-                            <img src="/courses/8175/files/8386784/preview" alt="settings_windows" /><br><br>
-                            <img src="/courses/8175/files/8386785/preview" alt="time_and_language" /><br><br>
-                            <img src="/courses/8175/files/8386787/preview" alt="regional_format" />
+                            <img src="/courses/8175/files/8418085/preview" alt="enable_final_grades" />
                             </p>
                     </div>
                     <br><br>
+                    <img src="/courses/8175/files/8417966/preview" alt="grade_calculation" /><br><br>
                 </td>
             </tr>
             <tr style="height: auto;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">2.</span> </strong></td>
-                <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Open TestVision and go to the <u>Sessions</u> menu.</span> </strong></td>
+                <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;"> Click on <u>+ Add partial result</u> to add the TestVision exam to the calculation.</span> </strong></td>
             </tr>
             <tr style="height: auto; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
-                <td style="width: 90%; border-style: hidden; height: auto;">
-                    <p><span class="element_toggler" role="button" aria-controls="sessions-menu_3-1" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Sessions menu</em></span> </span></p>
-                    <div id="sessions-menu_3-1" style="display: none; color: #6096e6;">
-                        <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="/courses/8175/files/8341352/preview" alt="sessions_menu" /></p>
-                    </div><br><br>
+                <td style="width: 90%; border-style: hidden; height: auto;"><img src="/courses/8175/files/8418254/preview" alt="add_partial_result" /><br><br>
                 </td>
             </tr>
             <tr style="height: 45px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>3.</strong></span></td>
-                <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Go to the <u>Results</u> of the exam.</span></strong></td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> <u>Select</u> the exam and click on <u>OK</u>.</span></strong></td>
             </tr>
             <tr>
                 <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
-                <td style="width: 89.5941%; border-style: hidden;">
-                    <img src="/courses/8175/files/8384574/preview" alt="results_button" /><br><br>
+                <td style="width: 89.5941%; border-style: hidden;">The exam is listed underneath a header called <u>TestVision Online</u>. The exam can also be recognized by the same [date] - [exam type] - [course name] - [course code] format and name as the exam in TestVision.
+                    <img src="/courses/8175/files/8418313/preview" alt="add_exam" /><br><br>
                 </td>
             </tr>
             <tr style="height: 45px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>4.</strong></span></td>
-                <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> An overview of the grades for this exam will be shown. Click on <u>Download</u> to download the grades.</span></strong></td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> The exam has now been added to the calculation. <u>Enter the desired weights</u> as percentages.</span></strong></td>
             </tr>
             <tr>
                 <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
-                <td style="width: 89.5941%; border-style: hidden;">You can also sort the grades by clicking on the header of the 'Result' column.<br><br>
+                <td style="width: 89.5941%; border-style: hidden;">You can also sort the grades by clicking on the header of the 'Result' column. <br><br>
                     <img src="/courses/8175/files/8384636/preview" alt="download_button" /><br><br>
                 </td>
             </tr>
