spelling/formulering van een paar zinnen gewijzigd

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -38,7 +38,7 @@
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #0645ad; border-width: 1.5px; padding-top: 30px; padding-right: 30px; padding-left: 30px; text-align: left; min-height: 200px;">
                 <h4><span style="color: #000000; font-size: 14pt;"><strong><em>Assessment and grades</em> <i class="icon-document"></i></strong></span></h4>
-                <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>Read how you can review the exam, how to analyse and adjust the exam scores and how to find the TestVision grades in your Canvas Final Grades menu. Only the steps marked with a  <i class="icon-star"></i>  are required to succesfully grade a TestVision exam and export the grades.</em></span></span></p>
+                <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>Read how to grade the exam, analyse and adjust the exam scores, and how to find export your TestVision grades. Only the steps marked with a  <i class="icon-star"></i>  are required to succesfully grade a TestVision exam and export the grades.</em></span></span></p>
             </div>
         </div>
     </div>
@@ -56,7 +56,7 @@
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_G3"> <span style="color: #000000;"> 1.3 &nbsp; Adjust the number of points a question is worth</span> </a> </span></p>
 
                 <p>&nbsp;</p>
-                <div id="dialog_for_corrections1" class="enhanceable_content dialog" style="font-size: 12pt; vertical-align: bottom;"><strong>Can't login to TestVision?</strong><br />When you receive an error saying 'Error - No suitable token found', you probably have yet to install your SURF Two Step verification token. Click here for more information. <br /><br /><strong>Can't find the exam in TestVision?</strong><br />ICTO needs to grant access to graders in TestVision for you to be able to grade the exam. If you don't have access yet, contact us at: icto-csw@uva.nl.<br /><br /></div>
+                <div id="dialog_for_corrections1" class="enhanceable_content dialog" style="font-size: 12pt; vertical-align: bottom;"><strong>Can't login to TestVision?</strong><br />When you receive an error saying 'Error - No suitable token found', you probably have yet to install your SURF Two Step verification token. Click here for more information. <br /><br /><strong>Can't find the exam in TestVision?</strong><br />ICTO needs to grant access to folders and exams in TestVision. If you're missing certain folders or exams, please contact us at: icto-csw@uva.nl.<br /><br /></div>
                 <p style="text-align: left;"><span style="font-size: 15pt;"><a id="corrections1" class="Button Button--link" style="width: 94%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#dialog_for_corrections1"><span style="color: #000000;"><i class="icon-question"></i>&nbsp; <em>Don't have access to TestVision? </em></span></a></span></p>
             </div>
         </div>
@@ -1234,8 +1234,8 @@
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto; text-align: left;"><strong> </strong>
-                        <p><div class="alert alert"> 
-                            <a class="icon-warning"></a><strong> Warning: The regional format of your computer must be set to the same language as TestVision for this tutorial.</strong> If your computer's regional format does not match TestVision's language, the grade export from TestVision will be interpreted incorrectly and as a result the grades cannot be exported to Canvas.
+                        <p><div class="alert alert-info"> 
+                            <a class="icon-info"></a><strong> Note: The regional format of your computer must be set to the same language as TestVision for this tutorial.</strong> If your computer's regional format does not match TestVision's language, the grade export from TestVision will be interpreted incorrectly and as a result the grades cannot be exported to Canvas.
                         </div></p>
                     </td>
                 </tr>
@@ -1378,11 +1378,11 @@
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>11.</strong></span></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Click on <u>Recalculate grades</u> > <u>Calculate all grades</u> to calculate the final grades based on the grades you just retrieved.</span></strong></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Click on <u>Recalculate grades</u> > <u>Calculate all grades</u> to calculate the final grades based on the grades you just imported.</span></strong></td>
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
-                    <td style="width: 89.5941%; border-style: hidden;">All grades shown in this menu are not visible to students, so feel free to calculate and modify to your liking.
+                    <td style="width: 89.5941%; border-style: hidden;">All grades shown in this menu are not visible to students, so don't be afraid to try and modify to your liking.<br><br>
                         <img src="/courses/8175/files/8421627/preview" alt="calculate_grades" /><br><br>
                     </td>
                 </tr>
@@ -1420,14 +1420,10 @@
     <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
         <tbody>
             <tr style="height: auto;">
-                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> </strong></td>
-                <td style="width: 90%; border-style: hidden; height: auto; text-align: right;"><span style="font-size: 12pt;"> <span style="color: #8c8c8c;">TestVision Help:</span> <a href="https://uva.testvision.nl/help/en/html/resultaten-per-afname.html"><span style="color: #08a68e;">ENG</span></a> | <a href="https://uva.testvision.nl/help/nl/html/resultaten-per-afname.html"><span style="color: #08a68e;">NL</span></a> </span> <br /><br /></td>
-            </tr>
-            <tr style="height: auto;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
                 <td style="width: 90%; border-style: hidden; height: auto; text-align: left;"><strong> </strong>
-                    <p><div class="alert alert"> 
-                        <a class="icon-warning"></a><strong> Warning: If you choose to export your grades using this method, the grades in the final grades tool might differ from those in TestVision.</strong> This method extracts the points from TestVision and applies its own grade calculation to these. This calculation always includes a chance score for multiple choice questions, which unfortunately cannot be disabled. If you wish to export your grades without a chance score, please <a href="#FAQ_A5">disable the chance score</a> and <a href="#FAQ_F1">export the grades via Excel</a>.
+                    <p><div class="alert alert-info"> 
+                        <a class="icon-info"></a><strong> Note: If you choose to export your grades using this method, the grades in the final grades tool might differ from those in TestVision.</strong> This method extracts the points from TestVision and applies its own grade calculation to these. This calculation always includes a chance score for multiple choice questions, which unfortunately cannot be disabled. If you wish to export your grades without a chance score, please <a href="#FAQ_A5">disable the chance score</a> and <a href="#FAQ_F1">export the grades via Excel</a>.
                     </div></p>
                 </td>
             </tr>
@@ -1503,7 +1499,7 @@
             </tr>
             <tr>
                 <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
-                <td style="width: 89.5941%; border-style: hidden;">All grades shown in this menu are not visible to students, so feel free to calculate and modify to your liking.<br><br>
+                <td style="width: 89.5941%; border-style: hidden;">All grades shown in this menu are not visible to students, so don't be afraid to try and modify to your liking.<br><br>
                     <img src="/courses/8175/files/8421627/preview" alt="calculate_grades" /><br><br>
                 </td>
             </tr>
