paar kleine wijzigingen obv feedback

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -56,7 +56,7 @@
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_G3"> <span style="color: #000000;"> 1.3 &nbsp; Adjust the number of points a question is worth</span> </a> </span></p>
 
                 <p>&nbsp;</p>
-                <div id="dialog_for_corrections1" class="enhanceable_content dialog" style="font-size: 12pt; vertical-align: bottom;"><strong>Can't login to TestVision?</strong><br />When you receive an error saying 'Error - No suitable token found', you probably have yet to install your SURF Two Step verification token. Click here for more information. <br /><br /><strong>Can't find the exam in TestVision?</strong><br />ICTO needs to grant access to folders and exams in TestVision. If you're missing certain folders or exams, please contact us at: icto-csw@uva.nl.<br /><br /></div>
+                <div id="dialog_for_corrections1" class="enhanceable_content dialog" style="font-size: 12pt; vertical-align: bottom;"><strong>Can't log in to TestVision?</strong><br />If you receive an error saying 'Error - No suitable token found', you probably have yet to install your SURF Two Step verification token. Click <a href="https://medewerker.uva.nl/en/content-secured/az/two-steps-authentication/surf/surf.html" target="_blank">here</a> for more information. <br><br>If you receive a SAML error, you're trying to log in via the link for students. Click <a href="https://uva.testvision.nl/online/fe/login_tvb.htm" target="_blank">here</a> to head to the TestVision site for teachers. <br><br>Still can't log in? Contact <a href="mailto:icto-csw@uva.nl">icto-csw@uva.nl</a>. <br><br><strong>Can't find the exam in TestVision?</strong><br />ICTO needs to grant access to folders and exams in TestVision. If you're missing certain folders or exams, please contact us at: <a href="mailto:icto-csw@uva.nl">icto-csw@uva.nl</a>.<br /><br /></div>
                 <p style="text-align: left;"><span style="font-size: 15pt;"><a id="corrections1" class="Button Button--link" style="width: 94%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#dialog_for_corrections1"><span style="color: #000000;"><i class="icon-question"></i>&nbsp; <em>Don't have access to TestVision? </em></span></a></span></p>
             </div>
         </div>
@@ -80,7 +80,7 @@
         <div class="styleguide-section__grid-demo-element" style="height: auto;">
             <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 25px; min-height: 410px; background-color: #fbfbfc;">
                 <div class="content-box pad-box-mini border border-b">
-                    <h4><i class="icon-check"></i> <span style="color: #000000;"> <strong> <span style="font-size: 15pt;"> &nbsp; &nbsp; Export grades</span></strong></span></h4>
+                    <h4><i class="icon-quiz"></i> <span style="color: #000000;"> <strong> <span style="font-size: 15pt;"> &nbsp; &nbsp; Export grades</span></strong></span></h4>
                 </div>
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_F1"> <span style="color: #000000;"><i class="icon-star"></i> &nbsp; 3A &nbsp; Export grades to Canvas via Excel</span> </a> </span></p>
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_F2"> <span style="color: #000000;"><i class="icon-star"></i> &nbsp; 3B &nbsp; Direct grade export to Canvas (with chance score enabled and fixed grade calculation)</span> </a> </span></p>
@@ -1349,10 +1349,10 @@
                         Please ensure the following:
                         <ol>
                             <li><u>loginname</u> (or <u>aanmeldnaam</u> if TestVision was set to Dutch) is set to <u>&#60;Student ID&#62;</u>.</li>
-                            <li><u>The name grade column you just renamed</u> is set to <u>&#60;new component&#62;</u>. You can also select <u>an existing Canvas assignment</u> if you've already created an assignment.</li>
+                            <li><u>The grade column you just renamed</u> is set to <u>&#60;new component&#62;</u>. You can also select <u>an existing Canvas assignment</u> if you've already created an assignment.</li>
                         </ol>
                         <span style="font-size: 15pt"; style="color: #6096e6";><a id="no_tests" class="Button Button--link" style="text-align: left; margin-left: auto; margin-right: auto;" href="#dialog_for_import_grades"><i class="icon-question"></i><em> Don't see your Canvas assignment? </em></span></a></span><br>
-                        <div id="dialog_for_import_grades" class="enhanceable_content dialog" style="font-size: 12pt;"><strong>Don't see you Canvas assignment?</strong><br />If you haven't added your Canvas assignment to the final grades calculation yet, you can't import the grades via the final grades tool. To resolve this, please create and add an assignment for the exam to the final grades calculation. Learn how to add your assignment to the calculation <a href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool#basic1" target="_blank">here</a>.<br><br></div>
+                        <div id="dialog_for_import_grades" class="enhanceable_content dialog" style="font-size: 12pt;"><strong>Don't see you Canvas assignment?</strong><br />If you want to upload the grades to an existing Canvas assignment through the final grades tool, make sure you've added your existing Canvas assignment to the final grades tool calculation setup before importing the grades. Learn how to add your assignment to the calculation <a href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool#basic1" target="_blank">here</a>.<br><br></div>
                         <br><br>
                         <img src="/courses/8175/files/8420218/preview" alt="import_columns" />
                         <p><span class="element_toggler" role="button" aria-controls="dutch-import-3-1" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Dutch import settings</em></span> </span></p>
@@ -1382,7 +1382,7 @@
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
-                    <td style="width: 89.5941%; border-style: hidden;">All grades shown in this menu are not visible to students, so don't be afraid to try and modify to your liking.<br><br>
+                    <td style="width: 89.5941%; border-style: hidden;">All grades shown in this menu are not visible to students, so don't be afraid to try and play around with the calculation.<br><br>
                         <img src="/courses/8175/files/8421627/preview" alt="calculate_grades" /><br><br>
                     </td>
                 </tr>
@@ -1475,7 +1475,7 @@
             </tr>
             <tr style="height: 45px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>5.</strong></span></td>
-                <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Click on <u>Retrieve grades from TestVision</u>.</span></strong></td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Click on <u>Retrieve TestVision grades</u>.</span></strong></td>
             </tr>
             <tr>
                 <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
@@ -1499,7 +1499,7 @@
             </tr>
             <tr>
                 <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
-                <td style="width: 89.5941%; border-style: hidden;">All grades shown in this menu are not visible to students, so don't be afraid to try and modify to your liking.<br><br>
+                <td style="width: 89.5941%; border-style: hidden;">All grades shown in this menu are not visible to students, so don't be afraid to try and play around with the calculation.<br><br>
                     <img src="/courses/8175/files/8421627/preview" alt="calculate_grades" /><br><br>
                 </td>
             </tr>
