kapotte knopjes bovenaan de pagina gefixt

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -16,7 +16,7 @@
                 <div class="content-box pad-box-mini border border-b">
                     <h4><span style="color: #34495e; font-size: 14pt;"><em>Creating the exam</em></span></h4>
                 </div>
-                <a id="" class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page">
+                <a class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page">
                     <h5><span style="font-size: 13pt; color: #000000;">View instructions <i class="icon-document"></i></span></h5>
                 </a>
             </div>
@@ -28,7 +28,7 @@
                 <div class="content-box pad-box-mini border border-b">
                     <h4><span style="color: #34495e; font-size: 14pt;"><em>Moment of examination</em></span></h4>
                 </div>
-                <a id="" class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page">
+                <a class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page">
                     <h5><span style="font-size: 13pt; color: #000000;">View FAQ <i class="icon-document"></i></span></h5>
                 </a>
             </div>
